Random z-index fix for IE

--- a/css/classify.styl
+++ b/css/classify.styl
@@ -39,6 +39,7 @@
     right 7%
     top 3%
     width 550px
+    z-index 2
 
     img
       box-sizing border-box
